--- a/supergraph.yaml
+++ b/supergraph.yaml
@@ -1,8 +1,8 @@
-# To learn more, [visit Apollo's config documentation](https://www.apollographql.com/docs/graphos/reference/router/configuration#yaml-config-file)
+# A federated GraphQL API (aka a supergraph) is a unified GraphQL API composed of different services—known as subgraphs—that are managed through a router.
 
-federation_version: =2.10.0-preview.4
-subgraphs: # Use this block to add all of the subgraphs (services) that make up your GraphQL API (including any @source used and listed under `preview_connectors` in `router-config.yaml`)
-  [subgraphName]:    # Populate this with your service's name and schema file
-    routing_url: http://placeholder     # This value is ignored
+federation_version: 2.10.0
+
+subgraphs: # Use this section to add all of the services that make up your GraphQL API
+  products: # The subgraph name. Populate this with your service's name.    routing_url: http://placeholder # This value is ignored
     schema:
-      file: schema/schema.graphql
+      file: products.graphql # The path to your schema (.graphql) file
