--- a/start-with-typescript/package.json
+++ b/start-with-typescript/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "start-with-typescript",
+  "name": "subgraph-template-typescript-apollo-server",
   "private": true,
   "description": "A template for TypeScript projects with pre-configured tooling",
   "version": "0.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apollographql/rover-init-starters.git"
+    "url": "https://github.com/apollographql/subgraph-template-typescript-apollo-server"
   },
-  "homepage": "https://github.com/apollographql/rover-init-starters#readme",
+  "homepage": "https://github.com/apollographql/subgraph-template-typescript-apollo-server#readme",
   "bugs": {
-    "url": "https://github.com/apollographql/rover-init-starters/issues"
+    "url": "https://github.com/apollographql/subgraph-template-typescript-apollo-server/issues"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
