--- a/start-with-typescript/package.json
+++ b/start-with-typescript/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@apollo/server": "^4.3.3",
     "@apollo/subgraph": "^2.3.1",
+    "apollo-server-errors": "^3.3.1",
     "graphql": "latest",
     "graphql-tag": "latest"
   },
