--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
       "language": "GraphQL",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
-      "routing_url": "http://ignore"
+      "routing_url": "http://ignore",
+      "print_depth": 2
     },
     {
       "id": "typescript",
@@ -17,7 +18,8 @@
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
       "command": "npm ci && npm start",
-      "routing_url": "http://localhost:4001"
+      "routing_url": "http://localhost:4001",
+      "print_depth": 2
     }
   ]
 }
