--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
       "language": "Typescript",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
+      "test_commands": ["npm ci","npm test"],
       "commands": ["npm ci", "npm start"],
       "routing_url": "http://localhost:4001",
       "print_depth": 2
