--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Rover Connectors Starter Kit",
   "scripts": {
-    "test": "node tests/validate-manifest.js"
+    "test": "node tests/validate-manifest.js",
+    "test:template": "node tests/validate-template.js"
   },
   "devDependencies": {
     "ajv": "^8.12.0"
