--- a/.github/workflows/templates-test.yml
+++ b/.github/workflows/templates-test.yml
@@ -30,3 +30,4 @@ jobs:
     - name: Test REST template
       run: |
         echo "Testing REST template..."
+        npm run test:template start-with-rest "npm ci" "npm test"
