--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
       "routing_url": "http://ignore",
-      "test_commands": ["echo","\"Rest template test coming soon\""],
+      "test_commands": ["echo \"REST template test coming soon\""],
       "print_depth": 2
     },
     {
