--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,9 @@
     },
     {
       "id": "typescript",
-      "display_name": "Build an API with Typescript",
+      "display_name": "Build an API with TypeScript",
       "path": "start-with-typescript",
-      "language": "Typescript",
+      "language": "TypeScript",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
       "commands": ["npm ci", "npm start"],
