--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     },
     {
       "id": "typescript",
-      "display_name": "Build an API with TypeScript",
+      "display_name": "Build an API with TypeScript and Apollo Server",
       "path": "start-with-typescript",
       "language": "Typescript",
       "federation_version": "=2.10.0",
