Adding additional template validations and migrating command to plural commands (#32)
* Adding schema validation and print_depth to schema

* adding a descriptive name to workflow

* Adding test for typescript template and renaming command to commands

* removed federation test

* Fixing test

* fixing tests

* adding release branch to manifest tests

* adding release branch to manifest tests

* Apply suggestions from code review

Co-authored-by: Taylor Jones <45475656+tayrrible@users.noreply.github.com>
Signed-off-by: Daniel <62493855+sanchezdale@users.noreply.github.com>

* Fixing failing test

* Adding min size validation to commands

* Adding contribution guidelines

* Adding new workflow to validate changelog is updated on release

* Update CONTRIBUTING.md

Co-authored-by: Taylor Jones <45475656+tayrrible@users.noreply.github.com>
Signed-off-by: Daniel <62493855+sanchezdale@users.noreply.github.com>

* table format

---------

Signed-off-by: Daniel <62493855+sanchezdale@users.noreply.github.com>
Co-authored-by: Taylor Jones <45475656+tayrrible@users.noreply.github.com>

--- a/.github/workflows/templates-test.yml
+++ b/.github/workflows/templates-test.yml
@@ -1,4 +1,4 @@
-name: Validation Tests
+name: Templates Test
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
     branches: [ main, 'releases/**' ]
 
 jobs:
-  test:
+  test-templates:
     runs-on: ubuntu-latest
     
     steps:
@@ -22,7 +22,12 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run manifest validation
+    - name: Test TypeScript template
       run: |
-        echo "🔍 Running manifest.json validation..."
-        node tests/validate-manifest.js
+        echo "Testing TypeScript template..."
+        npm run test:template start-with-typescript "npm ci" "npm test"
+
+    - name: Test REST template
+      run: |
+        echo "Testing REST template..."
+        npm run test:template start-with-rest "echo \"REST template test coming soon\""
