--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Validation Tests
 
 on:
   pull_request:
-    branches: [ main, 'releases/**' ]
+    branches: [ main, 'releases/**', 'release/**' ]
   push:
     branches: [ main, 'releases/**' ]
 
