--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main, 'releases/**', 'release/**' ]
   push:
-    branches: [ main, 'releases/**' ]
+    branches: [ main, 'releases/**', 'release/**' ]
 
 jobs:
   test:
