--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: Tests
+name: Validation Tests
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, 'releases/**', 'release/**' ]
   push:
-    branches: [ main ]
+    branches: [ main, 'releases/**', 'release/**' ]
 
 jobs:
   test:
@@ -21,13 +21,8 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-    
-    - name: List test files
-      run: |
-        echo "📋 Test files to be executed:"
-        ls -la tests/
-    
+
     - name: Run manifest validation
       run: |
         echo "🔍 Running manifest.json validation..."
-        node tests/validate-manifest.js 
+        node tests/validate-manifest.js
