--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,10 @@
       "display_name": "Start with REST",
       "path": "start-with-rest",
       "language": "GraphQL",
-      "federation_version": "=2.10.0",
+      "federation_version": "=2.11.0",
       "max_schema_depth": 5,
       "routing_url": "http://ignore",
+      "test_commands": ["echo \"REST template test coming soon\""],
       "print_depth": 2
     },
     {
@@ -17,6 +18,7 @@
       "language": "Typescript",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
+      "test_commands": ["npm ci","npm test"],
       "commands": ["npm ci", "npm run dev"],
       "routing_url": "http://localhost:4001",
       "print_depth": 2
