--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,18 @@
       "commands": ["npm ci", "npm run dev"],
       "routing_url": "http://localhost:4001",
       "print_depth": 2
+    },
+    {
+      "id": "react-typescript-apollo",
+      "display_name": "Build a React app with TypeScript for Apollo Client",
+      "path": "start-with-apollo-client",
+      "language": "TypeScript",
+      "federation_version": "=2.11.0",
+      "max_schema_depth": 5,
+      "test_commands": ["npm ci", "npm run build"],
+      "commands": ["npm install", "npm run dev"],
+      "routing_url": "http://localhost:5173",
+      "print_depth": 2
     }
   ]
 }
