--- a/start-with-apollo-client/package.json
+++ b/start-with-apollo-client/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run codegen && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen:watch": "graphql-codegen --config codegen.yml --watch",
+    "postinstall": "npm run codegen || echo 'Warning: GraphQL code generation failed. This may be due to network issues or invalid schema. You can run npm run codegen manually.'"
   },
   "dependencies": {
     "react": "{{REACT_VERSION}}",
@@ -25,6 +28,10 @@
     "eslint-plugin-react-hooks": "{{ESLINT_PLUGIN_REACT_HOOKS_VERSION}}",
     "eslint-plugin-react-refresh": "{{ESLINT_PLUGIN_REACT_REFRESH_VERSION}}",
     "typescript": "{{TYPESCRIPT_VERSION}}",
-    "vite": "{{VITE_VERSION}}"
+    "vite": "{{VITE_VERSION}}",
+    "@graphql-codegen/cli": "{{GRAPHQL_CODEGEN_CLI_VERSION}}",
+    "@graphql-codegen/typescript": "{{GRAPHQL_CODEGEN_TYPESCRIPT_VERSION}}",
+    "@graphql-codegen/typescript-operations": "{{GRAPHQL_CODEGEN_TYPESCRIPT_OPERATIONS_VERSION}}",
+    "@graphql-codegen/typescript-react-apollo": "{{GRAPHQL_CODEGEN_TYPESCRIPT_REACT_APOLLO_VERSION}}"
   }
 }
