--- a/start-with-apollo-client/tsconfig.json
+++ b/start-with-apollo-client/tsconfig.json
@@ -13,6 +13,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/generated/*": ["src/generated/*"],
+      "@/*": ["src/*"]
+    },
 
     /* Linting */
     "strict": true,
