--- a/start-with-apollo-client/package.json
+++ b/start-with-apollo-client/package.json
@@ -8,15 +8,18 @@
     "build": "npm run codegen && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen": "grep -q 'schema.*http' codegen.yml && graphql-codegen --config codegen.yml || echo 'No URL schema found or introspection unavailable. Skipping codegen.'",
     "codegen:watch": "graphql-codegen --config codegen.yml --watch",
-    "postinstall": "npm run codegen || echo 'Warning: GraphQL code generation failed. You can run npm run codegen manually.'"
+    "postinstall": "npm run codegen"
   },
   "dependencies": {
+    "ai-sdk/google": "^1.2.22",
+    "ai": "^4.3.17",
     "react": "{{REACT_VERSION}}",
     "react-dom": "{{REACT_DOM_VERSION}}",
     "@apollo/client": "{{APOLLO_CLIENT_VERSION}}",
-    "graphql": "{{GRAPHQL_VERSION}}"
+    "graphql": "{{GRAPHQL_VERSION}}",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "{{TYPES_REACT_VERSION}}",
