camille/hackathon[WIP]: Correct imports

--- a/start-with-apollo-client/.env.example
+++ b/start-with-apollo-client/.env.example
@@ -1,2 +1,6 @@
 # Apollo Client Configuration
 GRAPHQL_ENDPOINT=http://localhost:4000/graphql
+# Your API API key
+# Must be a Google/Gemini API key (for now)
+# Go to https://aistudio.google.com/apikey
+VITE_AI_API_KEY=API_KEY_HERE
