--- a/.github/workflows/templates-test.yml
+++ b/.github/workflows/templates-test.yml
@@ -20,12 +20,12 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: npm i
 
     - name: Test TypeScript template
       run: |
         echo "Testing TypeScript template..."
-        npm run test:template start-with-typescript "npm ci" "npm test"
+        npm run test:template start-with-typescript "npm i" "npm test"
 
     - name: Test REST template
       run: |
