camille/hackathon[WIP]: Complete minor refinements post-hackathon

--- a/start-with-apollo-client/.env.example
+++ b/start-with-apollo-client/.env.example
@@ -1,6 +1,8 @@
 # Apollo Client Configuration
 GRAPHQL_ENDPOINT=http://localhost:4000/graphql
+# For POC: point to POC rover init template for this project
+ROVER_INIT_TEMPLATE_REF=camille/fake-it-til-you-make-it
 # Your API API key
 # Must be a Google/Gemini API key (for now)
 # Go to https://aistudio.google.com/apikey
-VITE_AI_API_KEY=API_KEY_HERE
+AI_API_KEY=API_KEY_HERE
