camille/hackathon[WIP]: Update AI key env var name and add to README

--- a/start-with-apollo-client/.env.example
+++ b/start-with-apollo-client/.env.example
@@ -5,4 +5,4 @@ ROVER_INIT_TEMPLATE_REF=camille/fake-it-til-you-make-it
 # Your API API key
 # Must be a Google/Gemini API key (for now)
 # Go to https://aistudio.google.com/apikey
-AI_API_KEY=API_KEY_HERE
+VITE_AI_API_KEY=API_KEY_HERE
