--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,17 @@
       "commands": ["npm ci", "npm run dev"],
       "routing_url": "http://localhost:4001",
       "print_depth": 2
+    },
+    {
+      "id": "mcp",
+      "display_name": "Start with Apollo MCP Server",
+      "path": "start-with-mcp",
+      "language": "GraphQL",
+      "federation_version": "=2.11.0",
+      "max_schema_depth": 5,
+      "routing_url": "http://localhost:4000",
+      "test_commands": ["echo \"MCP template test coming soon\""],
+      "print_depth": 2
     }
   ]
 }
