feat(add-mcp): update mcp env template

--- a/add-mcp/.env.template
+++ b/add-mcp/.env.template
@@ -53,7 +53,7 @@ GRAPHQL_ENDPOINT_PRODUCTION="https://api.{{PROJECT_NAME}}.com/graphql"
 # - Schema introspection (if your endpoint requires authentication)
 # - Metrics and monitoring
 # - Studio integration features
-APOLLO_API_KEY="service:{{PROJECT_NAME}}:YOUR_API_KEY_HERE"
+APOLLO_KEY="service:{{PROJECT_NAME}}:YOUR_API_KEY_HERE"
 
 # Your Apollo Graph Reference (Graph ID@Variant)
 # Format: your-graph-id@current
