--- a/add-mcp/.apollo/mcp.local.yaml
+++ b/add-mcp/.apollo/mcp.local.yaml
@@ -7,9 +7,9 @@
 overrides:
   mutation_mode: all
 operations:
-  source: local
-  paths: 
-    - /tools                    # GraphQL files in /tools become AI tools
+  source: collection
+  id: default                   # localhost:4000 in browser → Sandbox → Collections → Create operations for MCP tools
+                                # Docs: https://www.apollographql.com/docs/apollo-mcp-server/define-tools
 introspection:
   introspect:
     enabled: true               # Required for AI to understand your schema
@@ -20,7 +20,7 @@ introspection:
 transport:
   type: streamable_http
   port: 5000                    # MCP server port
-endpoint: http://host.docker.internal:4000 # Your GraphQL API endpoint
+endpoint: http://localhost:4000 # Your GraphQL API endpoint
 
 # =============================================================================
 # Configuration Details
@@ -31,13 +31,13 @@ description: "GraphQL API for {{PROJECT_NAME}} with {{#if REST_CONNECTORS}}REST 
 
 # Essential settings for local development:
 # - mutations enabled for full API access
-# - introspection enabled for schema discovery  
-# - tools loaded from /tools directory
+# - introspection enabled for schema discovery
+# - tools loaded from operation collections
 # - connects to GraphQL API on port 4000
 
 # To customize:
-# 1. Update endpoint to match your GraphQL server URL
-# 2. Add .graphql files to /tools directory
+# 1. Create operation collections in Apollo Studio Sandbox
+# 2. Update endpoint to match your GraphQL server URL
 # 3. Run: docker build -f mcp.Dockerfile -t my-mcp-server .
 # 4. Run: docker run -p 5000:5000 --env-file .env my-mcp-server
 
