--- a/add-mcp/.apollo/mcp.staging.yaml
+++ b/add-mcp/.apollo/mcp.staging.yaml
@@ -8,9 +8,9 @@ overrides:
   mutation_mode: all
   require_confirmation: true    # Confirmation required for mutations in staging
 operations:
-  source: local
-  paths: 
-    - /tools                    # GraphQL files in /tools become AI tools
+  source: collection
+  id: default                   # GraphQL endpoint in browser → Sandbox → Collections → Create operations for MCP tools
+                                # Docs: https://www.apollographql.com/docs/apollo-mcp-server/define-tools
 introspection:
   introspect:
     enabled: true               # Enabled for testing (disable for production)
@@ -49,10 +49,11 @@ description: "Staging environment for {{PROJECT_NAME}} GraphQL API with {{#if RE
 # - Stricter rate limiting and validation
 
 # To deploy staging:
-# 1. Set STAGING_GRAPHQL_ENDPOINT to your staging GraphQL URL
-# 2. Set APOLLO_KEY for authentication
-# 3. Run: docker build -f mcp.Dockerfile -t my-mcp-staging .
-# 4. Run: docker run -p 5000:5000 --env-file .env.staging my-mcp-staging
+# 1. Create operation collections in Apollo Studio Sandbox
+# 2. Set STAGING_GRAPHQL_ENDPOINT to your staging GraphQL URL
+# 3. Set APOLLO_KEY for authentication
+# 4. Run: docker build -f mcp.Dockerfile -t my-mcp-staging .
+# 5. Run: docker run -p 5000:5000 --env-file .env.staging my-mcp-staging
 
 # Environment variables for staging:
 # STAGING_GRAPHQL_ENDPOINT - staging GraphQL endpoint
