Renaming schema files, capitalizing getting started files, pulling in hackathon improvements (#74)
* Remove start-with-rest/supergraph.yaml (#50)

https://github.com/apollographql/rover-init-starters/pull/50

* Renaming schema file and updating READMEs and getting-started.mds (#52)

* reworking readme and getting-started + renaming schema file

* reworking readme and getting-started + renaming schema file for typescript example

* actually renaming schema file

* simplify typescript readme

* Add .env to .gitignore (#53)

* simplifying working with schema and renaming getting started

* refactoring to rename files and remove unnecessary

---------

Co-authored-by: Alyssa Hursh <15177211+alyssahursh@users.noreply.github.com>
Co-authored-by: Danielle Mallare <dmallare7@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,8 @@
       "language": "Typescript",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
-      "test_commands": ["npm ci","npm test"],
-      "commands": ["npm ci", "npm run dev"],
+      "test_commands": ["npm i","npm test"],
+      "commands": ["npm i", "npm run dev"],
       "routing_url": "http://localhost:4001",
       "print_depth": 2
     },
